modules/gdscript/tests/scripts/runtime/errors/typed_dictionary_assign_differently_typed_key.gd
func get_key() -> Variant:
	return "key"

func test():
	var typed: Dictionary[int, int]
	typed[get_key()] = 0
	print('not ok')
